# RegServer

./: .env  .gitignore  Dockerfile  Pipfile  README.md  copy-distribution.ps1  copy-venv.ps1  pylintrc  pyproject.toml
InnoSetup/: copy-distribution.ps1  post-compile.bat  pre-compile.bat  setup-regserver_service.iss
doc/: Makefile  changelog.md  config.example.toml  openapi.yaml
doc/source/: actor_messages.rst  actor_registrar.rst  backend_mdns.rst  classes.rst  conf.py  error_handling.rst  folder_structure.rst  frontend_modbus.rst  index.rst  instrserver_mqtt.rst  modules.rst  regserver_is1.rst  regserver_local.rst  regserver_mqtt.rst  service_setup.rst  uml-app_crash.puml  uml-binary_messages.puml  uml-c3_ismqtt.puml  uml-c3_rs2.puml  uml-c3_rsis1.puml  uml-c3_rslocal.puml  uml-c3_rsmqtt.puml  uml-device_actor.puml  uml-device_base_actor.puml  uml-freeing.puml  uml-instrument_detection.puml  uml-instrument_removal.puml  uml-interrupt_usb.puml  uml-main.puml  uml-mdns_listener.puml  uml-mqtt_actor.puml  uml-mqtt_client_actor.puml  uml-mqtt_device_actor.puml  uml-mqtt_listener.puml  uml-mqtt_subscriber.puml  uml-redirect_actor.puml  uml-redirector_actor.puml  uml-registrationserver.puml  uml-reservation.puml  uml-restapi.puml  (+6 more)
manual/man-regserver-de/: latexmkrc  man-regserver-de.org
manual/man-regserver-de/fig/: bd-lanvpn.dia  bd-mqtt.dia  bd-registration_client.dia~
manual/man-regserver-de/inc/: ActorMessageFormats.org  ActorMessages.md  FolderStructure.md  RegistrationServerUml.puml  api-registration_server-free.json  api-registration_server-free_failed.json  api-registration_server-free_no_reservation_found.json  api-registration_server-free_reserved_by_other.json  api-registration_server-list_1.json  api-registration_server-list_2.json  api-registration_server-reserve.json  api-registration_server-reserve_failed_occupied.json
src/: add-firewall-rule.ps1  config.example.toml  config_linux.toml  config_windows.toml  eula.txt  firewall.bat  firewall.ps1  instrument_server_mqtt.py  ismqtt-service.py  raw-device-browser.py  regserver-service.py  regserver-service.spec  remove-rss.bat  requirements.txt  rm-firewall-rule.ps1  sarad_registration_server.py  sarad_registration_server.spec  setup-rss.bat  setup.cfg  setup.py  srs-service.py  version.py
src/locales/de/LC_MESSAGES/: regserver.mo  regserver.po
src/locales/en/LC_MESSAGES/: regserver.mo  regserver.po
src/registrationserver/: __init__.pyi  actor_messages.py  base_actor.py  config.py  config.pyi  device_db.py  helpers.py  ismqtt_main.py  logListener.py  logdef.py  logger.py  main.py  redirect_actor.py  redirect_actor.pyi  registrar.py  restapi.py  restapi.pyi  shutdown.py  test.py
src/registrationserver/modules/: device_actor.py  device_actor.pyi  ismqtt_messages.py  messages.py  messages.pyi  mqtt_scheduler.py
src/registrationserver/modules/is1/: is1_actor.py  is1_listener.py
src/registrationserver/modules/mdns_frontend/: mdns_advertiser.py  mdns_scheduler.py  rfc2217_redirector.py
src/registrationserver2/: Test.py  __init__.py  __init__.pyi  config.py  config.pyi  logdef.py  logger.py  main.py  main.pyi  mdnsListener.py  mdns_listener.py  redirector_actor.py  redirector_actor.pyi  restapi.py  restapi.pyi  test.py  test.pyi
src/registrationserver2/modules/: DeviceBaseActor.py  __init__.py  device_actor_manager.py  device_actor_manager.pyi  device_base_actor.py  device_base_actor.pyi  messages.py
src/regserver/: actor_messages.py  base_actor.py  config.py  helpers.py  hostname_functions.py  logdef.py  logger.py  main.py  redirect_actor.py  registrar.py  restapi.py  shutdown.py  version.py
src/regserver/modules/: device_actor.py  ismqtt_messages.py
src/test-tools/: test.py
systemd/: blinking_led.py  blinking_led.service  install-regserver_service  instrument_server.service  regserver.service
test/: registrationserver2.xml
tests/: test.py
(+84 files in other folders)
